card first section ok

--- a/index.html
+++ b/index.html
@@ -96,17 +96,14 @@
 
         <div class="row">
             <div class="section1-col">
+                <img src="./assets/images/slider1.png" alt="slider1">
                 <h3>Decouvrez nos inccontournables</h3>
-                <img src="./assets/images/slider1.png" alt="slider1"> <button class="button-success"></button>
-
+                <p>Lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolorLorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet sit amet</p>
             </div>
             <div class="section1-col">
+                <img src="./assets/images/slider2.png" alt="slider2">
                 <h3>McDonald's Recrute</h3>
                 <p>Lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolorLorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet sit amet</p>
-                <button class="button-extra1"></button>
-                <img src="./assets/images/slider2.png" alt="slider2"> <button class=" button-success "></button>
-
-
             </div>
 
 
@@ -195,7 +192,5 @@
 
 
 </body>
-
-</html>
 
 </html>
