--- a/index.html
+++ b/index.html
@@ -188,6 +188,8 @@
             location.reload();
 
         }
+
+        //si les fonctions hideCon , ShowCon, hideMenu, showMenu ne fonctionnent pas envoyer un message d'erreur dans la console (les verifier l'espace dans les "")
     </script>
 
 
