first section ok

--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
     <section id="section1" class="section1">
 
         <div class="row">
-            <div class="section1-col">
+            <div class="section1-col" id="first-section">
                 <img src="./assets/images/slider1.png" alt="slider1">
                 <h3>Decouvrez nos inccontournables</h3>
                 <p>Lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolorLorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet sit amet</p>
             </div>
-            <div class="section1-col">
+            <div class="section1-col" id="second-section-img">
                 <img src="./assets/images/slider2.png" alt="slider2">
                 <h3>McDonald's Recrute</h3>
                 <p>Lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolorLorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet sit amet</p>
@@ -176,7 +176,7 @@
         function ShowCon() {
             navUser.style.top = "0";
             //rendre le user menu invisible
-            user.style.display = "none ";
+            user.style.display = "none";
 
 
         }
