Correcting css + add responsivity to footer

--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
             </div>
             <div class="black-line"></div>
             <div class="footer-app">
-                <img src="assets/images/footer/McdoLogo.png" height="35" width="35" />
+                <img src="assets/images/footer/McdoLogo.png" id="footer-logo" height="35" width="35" />
                 <div class="footer-text">
-                    <p>Téléchargez maintenant l’application McDonald’s</p>
-                    <span>Lancer votre préparation à distance avec la nouvelle application McDonald’s</span>
+                    <span>Téléchargez maintenant l’application McDonald’s</span>
+                    <span id="subText">Lancer votre préparation à distance avec la nouvelle application McDonald’s</span>
                 </div>
             </div>
         </footer>
