footer component finish + responsive

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     </section>
 
 
-    <section class="footer-section">
+
         <footer class="footer">
             <div class="footer-contact">
                 <div>Contactez-nous</div>
@@ -171,10 +171,14 @@
                 <div class="footer-text">
                     <span>Téléchargez maintenant l’application McDonald’s</span>
                     <span id="subText">Lancer votre préparation à distance avec la nouvelle application McDonald’s</span>
+
+                </div>
+                <div class="app-button">
+                    <img src="assets/images/footer/AppleStore.png" height="50" width="140">
+                    <img src="assets/images/footer/Googleplay.png" height="50" width="140">
                 </div>
             </div>
         </footer>
-    </section>
 
     <script>
         var navLink = document.getElementById("navLink");
