--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             navLink.style.right = "-200px";
             //rendre le humburger menu visible
             menu.style.display = "block";
-            location.reload();
+            //location.reload();
         }
 
         function ShowCon() {
@@ -185,7 +185,7 @@
             navUser.style.top = "-300px";
             //rendre le user menu visible
             user.style.display = "block";
-            location.reload();
+            //location.reload();
 
         }
 
