--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
             <div class="footer-contact">
                 <div>Contactez-nous</div>
                 <div class="contact-buttons">
-                    <img src="assets/images/footer/FabeookLogo.png" height="35" width="35" />
-                    <img src="assets/images/footer/TwitterLogo.png" height="35" width="35" />
-                    <img src="assets/images/footer/InstagramLogo.png" height="35" width="35" />
-                    <img src="assets/images/footer/LinkedinLogo.png" height="35" width="35" />
+                   <a href="https://www.facebook.com/mcdonaldsfrance/" target="_blank"><img src="assets/images/footer/FabeookLogo.png" height="35" width="35" /></a>
+                  <a href="https://twitter.com/McDonaldsFrance" target="_blank"><img src="assets/images/footer/TwitterLogo.png" height="35" width="35" /></a>
+                  <a href="https://www.instagram.com/mcdonaldsfrance" target="_blank"><img src="assets/images/footer/InstagramLogo.png" height="35" width="35" /></a>
+                  <a href="https://fr.linkedin.com/company/mcdonald%27s-corporation" target="_blank" target="_blank"><img src="assets/images/footer/LinkedinLogo.png" height="35" width="35" /></a>
                 </div>
             </div>
             <div class="black-line"></div>
@@ -174,8 +174,8 @@
 
                 </div>
                 <div class="app-button">
-                    <img src="assets/images/footer/AppleStore.png" height="50" width="140">
-                    <img src="assets/images/footer/Googleplay.png" height="50" width="140">
+                    <a href="https://apps.apple.com/fr/app/mcdo/id324887734" target="_blank"><img src="assets/images/footer/AppleStore.png" height="50" width="140"></a>
+                    <a href="https://play.google.com/store/apps/details?id=com.mcdonalds.mobileapp" target="_blank"><img src="assets/images/footer/Googleplay.png" height="50" width="140"></a>
                 </div>
             </div>
         </footer>
