--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <title>Framework css</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721551398549890"
-        crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721551398549890" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
 
@@ -112,7 +111,15 @@
 
 
     </section>
+    <section class="image_map">
 
+        <img src="./assets/images/background.jpeg" />
+        <div class="map_call">
+            <h1>Nos restaurants près de chez vous</h1>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2625.475184322623!2d2.3874704155693665!3d48.84914850931174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e6727347e25d67%3A0xc73e22c1131584f7!2s242%20Rue%20du%20Faubourg%20Saint-Antoine%2C%2075012%20Paris!5e0!3m2!1sfr!2sfr!4v1675866857603!5m2!1sfr!2sfr"
+                width="600" height="280" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </section>
     <section>
         <!-- test col in first section
 
@@ -155,30 +162,30 @@
 
 
 
-        <footer class="footer">
-            <div class="footer-contact">
-                <div>Contactez-nous</div>
-                <div class="contact-buttons">
-                    <img src="assets/images/footer/FabeookLogo.png" height="35" width="35" />
-                    <img src="assets/images/footer/TwitterLogo.png" height="35" width="35" />
-                    <img src="assets/images/footer/InstagramLogo.png" height="35" width="35" />
-                    <img src="assets/images/footer/LinkedinLogo.png" height="35" width="35" />
-                </div>
+    <footer class="footer">
+        <div class="footer-contact">
+            <div>Contactez-nous</div>
+            <div class="contact-buttons">
+                <img src="assets/images/footer/FabeookLogo.png" height="35" width="35" />
+                <img src="assets/images/footer/TwitterLogo.png" height="35" width="35" />
+                <img src="assets/images/footer/InstagramLogo.png" height="35" width="35" />
+                <img src="assets/images/footer/LinkedinLogo.png" height="35" width="35" />
             </div>
-            <div class="black-line"></div>
-            <div class="footer-app">
-                <img src="assets/images/footer/McdoLogo.png" id="footer-logo" height="35" width="35" />
-                <div class="footer-text">
-                    <span>Téléchargez maintenant l’application McDonald’s</span>
-                    <span id="subText">Lancer votre préparation à distance avec la nouvelle application McDonald’s</span>
+        </div>
+        <div class="black-line"></div>
+        <div class="footer-app">
+            <img src="assets/images/footer/McdoLogo.png" id="footer-logo" height="35" width="35" />
+            <div class="footer-text">
+                <span>Téléchargez maintenant l’application McDonald’s</span>
+                <span id="subText">Lancer votre préparation à distance avec la nouvelle application McDonald’s</span>
 
-                </div>
-                <div class="app-button">
-                    <img src="assets/images/footer/AppleStore.png" height="50" width="140">
-                    <img src="assets/images/footer/Googleplay.png" height="50" width="140">
-                </div>
             </div>
-        </footer>
+            <div class="app-button">
+                <img src="assets/images/footer/AppleStore.png" height="50" width="140">
+                <img src="assets/images/footer/Googleplay.png" height="50" width="140">
+            </div>
+        </div>
+    </footer>
 
     <script>
         var navLink = document.getElementById("navLink");
