add new section

--- a/index.html
+++ b/index.html
@@ -121,6 +121,38 @@
         </div>
     </section>
     <section>
+
+        <section id="section2" class="section2">
+
+            <h1>Pour célébrer cet événement, nous avons le plaisir de vous présenter les légendes du basket-ball Shaquille O'Neal, LeBron James et Michael Jordan.</h1>
+            <p>Shaquille O'Neal, également connu sous le nom de Shaq, est un ancien joueur de la NBA qui a marqué l'histoire du basket-ball avec ses performances exceptionnelles. LeBron James, l'un des meilleurs joueurs de l'histoire de la NBA, a remporté
+                plusieurs titres de champion avec les Cleveland Cavaliers, les Miami Heat et les Los Angeles Lakers. Michael Jordan, considéré comme l'un des plus grands joueurs de basket-ball de tous les temps, a remporté six championnats de la NBA au
+                cours de sa carrière exceptionnelle. Nous sommes excités de vous présenter notre nouvelle collaboration qui offrira une expérience inoubliable pour les fans de la NBA et de McDonald's. Restez à l'écoute pour plus d'informations sur les
+                prochains événements et produits! Cordialement, L'équipe NBA & McDonald's.</p>
+
+            <div class="row">
+                <div class="section2-col">
+                    <img class="img-campus" src="./assets/images/shaq.jpeg">
+                    <div class="layer">
+                        <h3>shaquille o'neal</h3>
+                    </div>
+                </div>
+                <div class="section2-col">
+                    <img class="img-section2" src="./assets/images/lebron.jpeg">
+                    <div class="layer">
+                        <h3>Lebron James </h3>
+                    </div>
+                </div>
+                <div class="section2-col">
+                    <img class="img-section2" src="./assets/images/mick.jpeg">
+                    <div class="layer">
+                        <h3>Mickeal Jordan </h3>
+                    </div>
+                </div>
+            </div>
+
+
+        </section>
         <!-- test col in first section
 
             <div class="row ">
@@ -162,17 +194,17 @@
 
 
 
-        <footer class="footer">
-            <div class="footer-contact">
-                <div>Contactez-nous</div>
-                <div class="contact-buttons">
-                   <a href="https://www.facebook.com/mcdonaldsfrance/" target="_blank"><img src="assets/images/footer/FabeookLogo.png" height="35" width="35" /></a>
-                  <a href="https://twitter.com/McDonaldsFrance" target="_blank"><img src="assets/images/footer/TwitterLogo.png" height="35" width="35" /></a>
-                  <a href="https://www.instagram.com/mcdonaldsfrance" target="_blank"><img src="assets/images/footer/InstagramLogo.png" height="35" width="35" /></a>
-                  <a href="https://fr.linkedin.com/company/mcdonald%27s-corporation" target="_blank" target="_blank"><img src="assets/images/footer/LinkedinLogo.png" height="35" width="35" /></a>
-                </div>
-
+    <footer class="footer">
+        <div class="footer-contact">
+            <div>Contactez-nous</div>
+            <div class="contact-buttons">
+                <a href="https://www.facebook.com/mcdonaldsfrance/" target="_blank"><img src="assets/images/footer/FabeookLogo.png" height="35" width="35" /></a>
+                <a href="https://twitter.com/McDonaldsFrance" target="_blank"><img src="assets/images/footer/TwitterLogo.png" height="35" width="35" /></a>
+                <a href="https://www.instagram.com/mcdonaldsfrance" target="_blank"><img src="assets/images/footer/InstagramLogo.png" height="35" width="35" /></a>
+                <a href="https://fr.linkedin.com/company/mcdonald%27s-corporation" target="_blank" target="_blank"><img src="assets/images/footer/LinkedinLogo.png" height="35" width="35" /></a>
             </div>
+
+        </div>
         </div>
         <div class="black-line"></div>
         <div class="footer-app">
