--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
         <section id="section2" class="section2">
 
-            <h1>Pour célébrer cet événement, nous avons le plaisir de vous présenter les légendes du basket-ball Shaquille O'Neal, LeBron James et Michael Jordan.</h1>
+            <h2>Pour célébrer cet événement, nous avons le plaisir de vous présenter les légendes du basket-ball Shaquille O'Neal, LeBron James et Michael Jordan.</h2>
             <p>Shaquille O'Neal, également connu sous le nom de Shaq, est un ancien joueur de la NBA qui a marqué l'histoire du basket-ball avec ses performances exceptionnelles. LeBron James, l'un des meilleurs joueurs de l'histoire de la NBA, a remporté
                 plusieurs titres de champion avec les Cleveland Cavaliers, les Miami Heat et les Los Angeles Lakers. Michael Jordan, considéré comme l'un des plus grands joueurs de basket-ball de tous les temps, a remporté six championnats de la NBA au
                 cours de sa carrière exceptionnelle. Nous sommes excités de vous présenter notre nouvelle collaboration qui offrira une expérience inoubliable pour les fans de la NBA et de McDonald's. Restez à l'écoute pour plus d'informations sur les
@@ -132,9 +132,9 @@
 
             <div class="row">
                 <div class="section2-col">
-                    <img class="img-campus" src="./assets/images/shaq.jpeg">
+                    <img class="img-campus" src="./assets/images/antony.jpeg">
                     <div class="layer">
-                        <h3>shaquille o'neal</h3>
+                        <h3>Antony davies</h3>
                     </div>
                 </div>
                 <div class="section2-col">
