--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
                 <div class="slide">
                     <img src="./assets/images/slider1.png" alt="slider1" />
                     <img src="./assets/images/slider1.png" alt="slider1" />
+                    <img src="./assets/images/slider1.png" alt="slider1" />
+                    <img src="./assets/images/slider1.png" alt="slider1" />
+
 
                 </div>
 
