add audio to image

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
             <div class="row">
                 <div class="section2-col">
-                    <img class="img-campus" src="./assets/images/antony.jpeg">
+                    <img class="img-section2" src="./assets/images/antony.jpeg">
                     <div class="layer">
                         <h3>Antony davies</h3>
                     </div>
