add audio to image

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <div class="section2-col">
                     <img class="img-section2" src="./assets/images/antony.jpeg">
                     <div class="layer">
-                        <h3>Antony davies</h3>
+                        <h3>Antony davis</h3>
                     </div>
                 </div>
                 <div class="section2-col">
@@ -148,7 +148,7 @@
                 <div class="section2-col">
                     <img class="img-section2" src="./assets/images/mick.jpeg">
                     <div class="layer">
-                        <h3>Mickeal Jordan </h3>
+                        <h3>Mickal Jordan </h3>
                     </div>
                 </div>
             </div>
