add command page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </li>
 
                     <button class="button-warning" id="button-nav">Se connecter</button>
-                    <button class="button-success" id="button-nav">Commander</button>
+                    <button onclick="location.href='./commander.html'" class="button-success" id="button-nav">Commander</button>
 
                 </ul>
             </div>
