--- a/commander.html
+++ b/commander.html
@@ -66,7 +66,7 @@
 
 
         </nav>
-        <div id="map" style="width: 1500px; height: 850px;"></div>
+        <div id="map" style="width: 100%; height: 100%;"></div>
 
 
 
