--- a/commander.html
+++ b/commander.html
@@ -66,7 +66,7 @@
 
 
         </nav>
-        <div id="map" style="width: 100%; height: 100%;"></div>
+        <div id="map" class="McDonalds" style="width: 100%; height: 100%;" value="McDonalds"></div>
 
 
 
