--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
     <section>
 
         <section id="section2" class="section2">
+            <!-- changer le nom de la h3 pour  l'audio de ce qui est rechercher-->
 
             <h2>Pour célébrer cet événement, nous avons le plaisir de vous présenter les légendes du basket-ball Shaquille O'Neal, LeBron James et Michael Jordan.</h2>
             <p>Shaquille O'Neal, également connu sous le nom de Shaq, est un ancien joueur de la NBA qui a marqué l'histoire du basket-ball avec ses performances exceptionnelles. LeBron James, l'un des meilleurs joueurs de l'histoire de la NBA, a remporté
