update logo re actif

--- a/commander.html
+++ b/commander.html
@@ -67,7 +67,7 @@
 
         </nav>
         <!-- changer le nom de la classe pour ce qui est rechercher-->
-        <div id="map" class="McDonalds" style="width: 100%; height: 100%;" value="McDonalds"></div>
+        <div id="map" class="McDonalds" style="width: 100%; height: 100%;" data-url="./assets/images/icon_m.png"></div>
 
 
 
