add script for menu to order page

--- a/commander.html
+++ b/commander.html
@@ -76,6 +76,8 @@
     </script>
     <script src="./assets/scripts/initMap.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_IEjM6QGiiLnJfeQPRK7Pq6hHUBhrPDo&libraries=places&callback=initMap"></script>
+    <script src="./assets/scripts/menu.js"></script>
+
 
 </body>
 
