--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         </a>
                     </li>
 
-                    <button class="button-warning" id="button-nav">Se connecter</button>
+                    <button onclick="location.href='./connexion.html'" class="button-warning" id="button-nav">Se connecter</button>
                     <button onclick="location.href='./commander.html'" class="button-success" id="button-nav">Commander</button>
 
                 </ul>
