add background basic

--- a/connexion.html
+++ b/connexion.html
@@ -78,15 +78,13 @@
                 <div class="form-connexion-body">
                     <form action="#" method="POST">
                         <div class="form-connexion-input">
-                            <label for="email">Email</label>
                             <input type="email" name="email" id="email" placeholder="Email">
                         </div>
                         <div class="form-connexion-input">
                             <span class="error"></span>
-                            <label for="password">Mot de passe</label>
                             <input type="password" name="password" id="password" placeholder="Mot de passe">
                         </div>
-                        <div class="form-connexion-input">
+                        <div class="form-connexion-input-submit">
                             <input type="submit" value="Se connecter" class="button-success">
                         </div>
                     </form>
