--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Framework css</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721551398549890" crossorigin="anonymous"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6721551398549890"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
 
@@ -26,7 +27,7 @@
                         <a href="./index.html"> Nous restaurants</a>
                     </li>
                     <li>
-                        <a href="./product.html"> Nos produits </a>
+                        <a href="./products.html"> Nos produits </a>
                     </li>
                     <li>
                         <a href="./blog.html"> Blog</a>
@@ -43,8 +44,10 @@
                         </a>
                     </li>
 
-                    <button onclick="location.href='./connexion.html'" class="button-warning" id="button-nav">Se connecter</button>
-                    <button onclick="location.href='./commander.html'" class="button-success" id="button-nav">Commander</button>
+                    <button onclick="location.href='./connexion.html'" class="button-warning" id="button-nav">Se
+                        connecter</button>
+                    <button onclick="location.href='./commander.html'" class="button-success"
+                        id="button-nav">Commander</button>
 
                 </ul>
             </div>
@@ -101,12 +104,14 @@
             <div class="section1-col" id="first-section">
                 <img src="./assets/images/slider1.png" alt="slider1">
                 <h3>Decouvrez nos inccontournables</h3>
-                <p>Lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolorLorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet sit amet</p>
+                <p>Lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolorLorem ipsum dolor sit amet
+                    lorem ipsum dolor sit amet lorem ipsum dolor sit amet sit amet</p>
             </div>
             <div class="section1-col" id="second-section-img">
                 <img src="./assets/images/slider2.png" alt="slider2">
                 <h3>McDonald's Recrute</h3>
-                <p>Lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolorLorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet sit amet</p>
+                <p>Lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolorLorem ipsum dolor sit amet
+                    lorem ipsum dolor sit amet lorem ipsum dolor sit amet sit amet</p>
             </div>
 
         </div>
@@ -118,8 +123,10 @@
         <img src="./assets/images/background.jpeg" />
         <div class="map_call">
             <h1>Nos restaurants près de chez vous</h1>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2625.475184322623!2d2.3874704155693665!3d48.84914850931174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e6727347e25d67%3A0xc73e22c1131584f7!2s242%20Rue%20du%20Faubourg%20Saint-Antoine%2C%2075012%20Paris!5e0!3m2!1sfr!2sfr!4v1675866857603!5m2!1sfr!2sfr"
-                width="600" height="280" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2625.475184322623!2d2.3874704155693665!3d48.84914850931174!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e6727347e25d67%3A0xc73e22c1131584f7!2s242%20Rue%20du%20Faubourg%20Saint-Antoine%2C%2075012%20Paris!5e0!3m2!1sfr!2sfr!4v1675866857603!5m2!1sfr!2sfr"
+                width="600" height="280" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </section>
     <section>
@@ -127,10 +134,17 @@
         <section id="section2" class="section2">
             <!-- changer le nom de la h3 pour  l'audio de ce qui est rechercher-->
 
-            <h2>Pour célébrer cet événement, nous avons le plaisir de vous présenter les légendes du basket-ball Shaquille O'Neal, LeBron James et Michael Jordan.</h2>
-            <p>Shaquille O'Neal, également connu sous le nom de Shaq, est un ancien joueur de la NBA qui a marqué l'histoire du basket-ball avec ses performances exceptionnelles. LeBron James, l'un des meilleurs joueurs de l'histoire de la NBA, a remporté
-                plusieurs titres de champion avec les Cleveland Cavaliers, les Miami Heat et les Los Angeles Lakers. Michael Jordan, considéré comme l'un des plus grands joueurs de basket-ball de tous les temps, a remporté six championnats de la NBA au
-                cours de sa carrière exceptionnelle. Nous sommes excités de vous présenter notre nouvelle collaboration qui offrira une expérience inoubliable pour les fans de la NBA et de McDonald's. Restez à l'écoute pour plus d'informations sur les
+            <h2>Pour célébrer cet événement, nous avons le plaisir de vous présenter les légendes du basket-ball
+                Shaquille O'Neal, LeBron James et Michael Jordan.</h2>
+            <p>Shaquille O'Neal, également connu sous le nom de Shaq, est un ancien joueur de la NBA qui a marqué
+                l'histoire du basket-ball avec ses performances exceptionnelles. LeBron James, l'un des meilleurs
+                joueurs de l'histoire de la NBA, a remporté
+                plusieurs titres de champion avec les Cleveland Cavaliers, les Miami Heat et les Los Angeles Lakers.
+                Michael Jordan, considéré comme l'un des plus grands joueurs de basket-ball de tous les temps, a
+                remporté six championnats de la NBA au
+                cours de sa carrière exceptionnelle. Nous sommes excités de vous présenter notre nouvelle collaboration
+                qui offrira une expérience inoubliable pour les fans de la NBA et de McDonald's. Restez à l'écoute pour
+                plus d'informations sur les
                 prochains événements et produits! Cordialement, L'équipe NBA & McDonald's.</p>
 
             <div class="row">
@@ -201,10 +215,14 @@
         <div class="footer-contact">
             <div>Contactez-nous</div>
             <div class="contact-buttons">
-                <a href="https://www.facebook.com/mcdonaldsfrance/" target="_blank"><img src="assets/images/footer/FabeookLogo.png" height="35" width="35" /></a>
-                <a href="https://twitter.com/McDonaldsFrance" target="_blank"><img src="assets/images/footer/TwitterLogo.png" height="35" width="35" /></a>
-                <a href="https://www.instagram.com/mcdonaldsfrance" target="_blank"><img src="assets/images/footer/InstagramLogo.png" height="35" width="35" /></a>
-                <a href="https://fr.linkedin.com/company/mcdonald%27s-corporation" target="_blank" target="_blank"><img src="assets/images/footer/LinkedinLogo.png" height="35" width="35" /></a>
+                <a href="https://www.facebook.com/mcdonaldsfrance/" target="_blank"><img
+                        src="assets/images/footer/FabeookLogo.png" height="35" width="35" /></a>
+                <a href="https://twitter.com/McDonaldsFrance" target="_blank"><img
+                        src="assets/images/footer/TwitterLogo.png" height="35" width="35" /></a>
+                <a href="https://www.instagram.com/mcdonaldsfrance" target="_blank"><img
+                        src="assets/images/footer/InstagramLogo.png" height="35" width="35" /></a>
+                <a href="https://fr.linkedin.com/company/mcdonald%27s-corporation" target="_blank" target="_blank"><img
+                        src="assets/images/footer/LinkedinLogo.png" height="35" width="35" /></a>
             </div>
 
         </div>
