--- a/connexion.html
+++ b/connexion.html
@@ -85,6 +85,12 @@
                             <input type="password" name="password" id="password" placeholder="Mot de passe">
 
                         </div>
+                        <div class="form-connexion-links">
+                            <a href="#">Mot de passe oublié ?</a>
+                            <div class="eye">
+                                <i class="fa fa-eye-slash" aria-hidden="true"></i>
+                            </div>
+                        </div>
                         <div class="form-connexion-input-submit">
                             <input type="submit" value="Se connecter" class="button-success">
                         </div>
