build connexion  ok

--- a/connexion.html
+++ b/connexion.html
@@ -94,6 +94,13 @@
                         <div class="form-connexion-input-submit">
                             <input type="submit" value="Se connecter" class="button-success">
                         </div>
+                        <div class="form-connexion-input-submit">
+                            <span onclick="location='./inscription.html'">
+                                Vous n'avez pas de compte ?
+                            </span>
+                            <a class="link" href="./inscription.html">Inscrivez vous</a>
+
+                        </div>
                     </form>
                 </div>
             </div>
