edit name of component

--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@
         </div>
     </section>
 
-    <section id="section1" class="section1">
+    <section id="animate_card" class="animate_card">
 
         <div class="row">
-            <div class="section1-col" id="first-section">
+            <div class="animate_card-col" id="first-section">
                 <img src="./assets/images/slider1.png" alt="slider1">
                 <h3>Decouvrez nos inccontournables</h3>
                 <p>Lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolorLorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet sit amet</p>
             </div>
-            <div class="section1-col" id="second-section-img">
+            <div class="animate_card-col" id="second-section-img">
                 <img src="./assets/images/slider2.png" alt="slider2">
                 <h3>McDonald's Recrute</h3>
                 <p>Lorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolorLorem ipsum dolor sit amet lorem ipsum dolor sit amet lorem ipsum dolor sit amet sit amet</p>
@@ -228,10 +228,10 @@
     <script>
         //si les fonctions hideCon , ShowCon, hideMenu, showMenu ne fonctionnent pas envoyer un message d'erreur dans la console (les verifier l'espace dans les "")
 
-        //pour la section1
+        //pour la animate_card
     </script>
 
-    <script src="./assets/scripts/animate_section1.js"></script>
+    <script src="./assets/scripts/animate_card.js"></script>
     <script src="./assets/scripts/menu.js"></script>
     <script src="./assets/scripts/audio_section2.js"></script>
 
