edit name of component

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </section>
     <section>
 
-        <section id="section2" class="section2">
+        <section id="layers" class="layers">
             <!-- changer le nom de la h3 pour  l'audio de ce qui est rechercher-->
 
             <h2>Pour célébrer cet événement, nous avons le plaisir de vous présenter les légendes du basket-ball Shaquille O'Neal, LeBron James et Michael Jordan.</h2>
@@ -134,20 +134,20 @@
                 prochains événements et produits! Cordialement, L'équipe NBA & McDonald's.</p>
 
             <div class="row">
-                <div class="section2-col">
-                    <img class="img-section2" src="./assets/images/antony.jpeg">
+                <div class="layers-col">
+                    <img class="img-layers" src="./assets/images/antony.jpeg">
                     <div class="layer">
                         <h3>Antony davis</h3>
                     </div>
                 </div>
-                <div class="section2-col">
-                    <img class="img-section2" src="./assets/images/lebron.jpeg">
+                <div class="layers-col">
+                    <img class="img-layers" src="./assets/images/lebron.jpeg">
                     <div class="layer">
                         <h3>Lebron James </h3>
                     </div>
                 </div>
-                <div class="section2-col">
-                    <img class="img-section2" src="./assets/images/mick.jpeg">
+                <div class="layers-col">
+                    <img class="img-layers" src="./assets/images/mick.jpeg">
                     <div class="layer">
                         <h3>Mickal Jordan </h3>
                     </div>
@@ -228,12 +228,12 @@
     <script>
         //si les fonctions hideCon , ShowCon, hideMenu, showMenu ne fonctionnent pas envoyer un message d'erreur dans la console (les verifier l'espace dans les "")
 
-        //pour la animate_card
+        //pour la
     </script>
 
     <script src="./assets/scripts/animate_card.js"></script>
     <script src="./assets/scripts/menu.js"></script>
-    <script src="./assets/scripts/audio_section2.js"></script>
+    <script src="./assets/scripts/audio_layers.js"></script>
 
 </body>
 
