build base for card

--- a/component-whithout-live.html
+++ b/component-whithout-live.html
@@ -18,64 +18,16 @@
 <body>
 
 
-    <section class="header">
-        <nav class="navbar">
-            <a href="./index.html"> <img class="logo" src="./assets/images/logo_s1.png" alt="logo"></a>
-            <div class="nav-link" id="navLink">
-                <i class="fas fa-times" onclick="hideMenu()"></i>
-                <ul>
-                    <li>
-                        <a href="./index.html"> Nous restaurants</a>
-                    </li>
-                    <li>
-                        <a href="./index.html"> Nos produits </a>
-                    </li>
-                    <li>
-                        <a href="#cta"> Contact</a>
-                    </li>
-                    <li>
-                        <a href="#cta"> |</a>
-                    </li>
-                    <li>
-                        <a href="#cta">
-                            <i class="fa-solid fa-magnifying-glass"></i>
-                        </a>
-                    </li>
+    <div class="card">
+        <img src="./assets/images/slider1.png" alt="image de burgers">
+        <span class="article_name">
+           Big Mac
+        </span>
+        <span class="price">
+            12.99€
+        </span>
+    </div>
 
-                    <button onclick="location.href='./connexion.html'" class="button-warning" id="button-nav">Se connecter</button>
-                    <button onclick="location.href='./commander.html'" class="button-success" id="button-nav">Commander</button>
-
-                </ul>
-            </div>
-            <div class="nav-user" id="navUser">
-                <i class="fas fa-times" onclick="hideCon()"></i>
-                <ul>
-                    <li>
-                        <a href="./index.html"> Connexion</a>
-                    </li>
-                    <li>
-                        <a href="./index.html"> Inscription</a>
-                    </li>
-
-                </ul>
-            </div>
-
-            <i class="fa-solid fa-user" id="user" onclick="ShowCon()"></i>
-            <i class="fa-solid fa-bars" id="humberger" onclick="showMenu()"></i>
-
-
-        </nav>
-        <!-- le form-->
-        <div class="card">
-
-
-
-        </div>
-
-
-
-
-    </section>
 
 
 
