build base for card

--- a/component-whithout-live.html
+++ b/component-whithout-live.html
@@ -27,6 +27,24 @@
             12.99€
         </span>
     </div>
+    <div class="card">
+        <img src="./assets/images/slider1.png" alt="image de burgers">
+        <span class="article_name">
+           Big Mac
+        </span>
+        <span class="price">
+            12.99€
+        </span>
+    </div>
+    <div class="card">
+        <img src="./assets/images/slider1.png" alt="image de burgers">
+        <span class="article_name">
+           Big Mac
+        </span>
+        <span class="price">
+            12.99€
+        </span>
+    </div>
 
 
 
