build base for cards

--- a/component-whithout-live.html
+++ b/component-whithout-live.html
@@ -23,7 +23,7 @@
         <span class="article_name">
            Big Mac
         </span>
-        <span class="price">
+        <span class="article_price">
             12.99€
         </span>
     </div>
@@ -32,7 +32,7 @@
         <span class="article_name">
            Big Mac
         </span>
-        <span class="price">
+        <span class="article_price">
             12.99€
         </span>
     </div>
@@ -41,7 +41,7 @@
         <span class="article_name">
            Big Mac
         </span>
-        <span class="price">
+        <span class="article_price">
             12.99€
         </span>
     </div>
