start responsive sidebar with react

--- a/component-side-bar-responsive.html
+++ b/component-side-bar-responsive.html
@@ -18,33 +18,18 @@
 <body>
 
 
-    <div class="card">
-        <img src="./assets/images/slider1.png" alt="image de burgers">
-        <span class="article_name">
-           Big Mac
-        </span>
-        <span class="article_price">
-            12.99€
-        </span>
+    <div class="side_bar">
+        <a href="#" class="icon">Link 1</a>
+        <a href="#" class="icon">Link 1</a>
+        <a href="#" class="icon">Link 1</a>
+        <a href="#" class="icon">Link 1</a>
+        <a href="#" class="icon">Link 1</a>
+        <a href="#" class="icon">Link 1</a>
+        <a href="#" class="icon">Link 1</a>
+        <a href="#" class="icon">Link 1</a>
     </div>
-    <div class="card">
-        <img src="./assets/images/slider1.png" alt="image de burgers">
-        <span class="article_name">
-           Big Mac
-        </span>
-        <span class="article_price">
-            12.99€
-        </span>
-    </div>
-    <div class="card">
-        <img src="./assets/images/slider1.png" alt="image de burgers">
-        <span class="article_name">
-           Big Mac
-        </span>
-        <span class="article_price">
-            12.99€
-        </span>
-    </div>
+
+
 
 
 
