--- a/component-side-bar-responsive.html
+++ b/component-side-bar-responsive.html
@@ -19,14 +19,33 @@
 
 
     <div class="side_bar">
-        <a href="#" class="icon">Link 1</a>
-        <a href="#" class="icon">Link 1</a>
-        <a href="#" class="icon">Link 1</a>
-        <a href="#" class="icon">Link 1</a>
-        <a href="#" class="icon">Link 1</a>
-        <a href="#" class="icon">Link 1</a>
-        <a href="#" class="icon">Link 1</a>
-        <a href="#" class="icon">Link 1</a>
+        <a href="#" class="icon">
+            <img src="./assets/images/sidebar/caf.png">
+        </a>
+        <a href="#" class="icon">
+            <img src="./assets/images/sidebar/hamburger.png">
+        </a>
+        <a href="#" class="icon">
+            <img src="./assets/images/sidebar/icons8-frt.png">
+        </a>
+        <a href="#" class="icon">
+            <img src="./assets/images/sidebar/icons8-kch.png">
+        </a>
+        <a href="#" class="icon">
+            <img src="./assets/images/sidebar/icons8-mc.png">
+        </a>
+        <a href="#" class="icon">
+            <img src="./assets/images/sidebar/icons8-menu.png">
+        </a>
+        <a href="#" class="icon">
+            <img src="./assets/images/sidebar/icons8-soda.png">
+        </a>
+        <a href="#" class="icon">
+            <img src="./assets/images/sidebar/icons8-wrap.png">
+        </a>
+        <a href="#" class="icon">
+            <img src="./assets/images/sidebar/lettu.png">
+        </a>
     </div>
 
 
